[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "python-telegram-bot>=21.9",
    "yt-dlp>=2025.5.22",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "ffmpeg-python>=0.2.0",
    "telegram>=0.0.1",
]
